# wut-mini-deep-learning

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt
bathrooms/: DCGAN.py  Pipfile
bedrooms/: .gitignore  DCGAN.py  Pipfile  local.py  local.yaml  mytypes.py  networks.py  train.py  train_fixed.py  utils.py
bedrooms/configs/: DCGANProgressive_0.yaml  DCGANProgressive_1.1.yaml  DCGANProgressive_1.2.yaml  DCGANProgressive_1.3.yaml  DCGANProgressive_1.4.yaml  DCGANProgressive_1.5.yaml  DCGAN_0.yaml  StyleGAN3_0.yaml  VAE_0.3.yaml  VAE_0.4.yaml  VAE_0.yaml  VAE_1.1.yaml  VAE_1.2.yaml  VAE_1.3.yaml  VAE_1.4.yaml  VAE_1.5.yaml
bedrooms/networks/: StyleGAN3.py  dcgan.py  dcganProgressive.py  networks.py  vae.py
bedrooms/scripts/: copy.sh
cifar-10-cnn/cnn/experiments/: ploting.ipynb
cifar-10-cnn/cnn/experiments/architecture/1.0.0/: training.csv
cifar-10-cnn/cnn/include/: convnet.h
cifar-10-cnn/cnn/include/Util/: Concurrency.h
cifar-10-cnn/cnn/src/: convnet.cpp
cifar-10-cnn/cnn/src/Eden_resources/: Ngpus_Ncpus.cu
cnn/: CMakeLists.txt  best_model  logsEXP_6_REG_none_REGLAM_none_AUG_none_RUN_0.csv  logsEXP_6_REG_none_REGLAM_none_AUG_rotations_RUN_0.csv  modelsEXP_6_REG_none_REGLAM_none_AUG_none_RUN_0
cnn/include/: augumentation.h  convnet.h  image_manip.h  imagefolder_dataset.h  mlp1.h  mlpdeep.h  train_options.h
cnn/include/Util/: CSVLogger.h  CSVReader.h  Concurrency.h
cnn/logs/: AUG_crops_RUN_0.csv  AUG_flips_RUN_0.csv  logs.tar
cnn/logs/lrConst_bestLoss/a100/: EXP_0_REG_none_REGLAM_1e-4_AUG_none_RUN_0.csv  EXP_0_REG_none_REGLAM_1e-4_AUG_none_RUN_1.csv  EXP_0_REG_none_REGLAM_1e-4_AUG_none_RUN_2.csv  EXP_0_REG_none_REGLAM_1e-4_AUG_none_RUN_3.csv  EXP_0_REG_none_REGLAM_1e-4_AUG_none_RUN_4.csv  EXP_0_REG_none_REGLAM_1e-4_AUG_none_RUN_5.csv  EXP_0_REG_none_REGLAM_1e-4_AUG_none_RUN_6.csv  EXP_0_REG_none_REGLAM_1e-4_AUG_none_RUN_7.csv  EXP_1_REG_none_REGLAM_1e-4_AUG_flips_RUN_0.csv  EXP_1_REG_none_REGLAM_1e-4_AUG_flips_RUN_1.csv  EXP_1_REG_none_REGLAM_1e-4_AUG_flips_RUN_2.csv  EXP_1_REG_none_REGLAM_1e-4_AUG_flips_RUN_3.csv  EXP_1_REG_none_REGLAM_1e-4_AUG_flips_RUN_4.csv  EXP_1_REG_none_REGLAM_1e-4_AUG_flips_RUN_5.csv  EXP_1_REG_none_REGLAM_1e-4_AUG_flips_RUN_6.csv  EXP_1_REG_none_REGLAM_1e-4_AUG_flips_RUN_7.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_0.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_0_test.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_1.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_1_test.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_2.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_2_test.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_3.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_3_test.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_4.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_4_test.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_5.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_5_test.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_6.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_6_test.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_7.csv  EXP_2_REG_none_REGLAM_1e-4_AUG_rotations_RUN_7_test.csv  EXP_3_REG_none_REGLAM_1e-4_AUG_crops_RUN_0.csv  EXP_3_REG_none_REGLAM_1e-4_AUG_crops_RUN_0_test.csv  EXP_3_REG_none_REGLAM_1e-4_AUG_crops_RUN_1.csv  EXP_3_REG_none_REGLAM_1e-4_AUG_crops_RUN_1_test.csv  EXP_3_REG_none_REGLAM_1e-4_AUG_crops_RUN_2.csv  EXP_3_REG_none_REGLAM_1e-4_AUG_crops_RUN_2_test.csv  EXP_3_REG_none_REGLAM_1e-4_AUG_crops_RUN_3.csv  EXP_3_REG_none_REGLAM_1e-4_AUG_crops_RUN_3_test.csv  (+40 more)
cnn/logs/lrConst_bestLoss/rtx2060/: AUG_crops_RUN_0.csv  AUG_flips_RUN_0.csv  AUG_mixup_RUN_0.csv  AUG_rotations_RUN_0.csv  REGLAM_1e-1_AUG_none_RUN_0.csv  REG_none_REGLAM_1e-4_AUG_none_RUN_0 copy.csv  REG_none_REGLAM_1e-4_AUG_none_RUN_0.csv
cnn/models/: EXP_5_REG_l1_REGLAM_AUG_none_RUN_0
cnn/src/: Concurrency.cpp  convnet.cpp  image_manip.cpp  imagefolder_dataset.cpp  main.cpp  mlp1.cpp  mlpdeep.cpp  train_options.cpp
cnn/src/Eden_resources/: CMakeLists.txt  Ngpus_Ncpus.cu
project1/cnn/include/: image_manip.h  mlp1.h  mlpdeep.h
project1/cnn/src/: Concurrency.cpp  main.cpp  train_options.cpp
project2/: Project.toml
project2/dataset/: .gitignore  README.md  unpack.sh
project2/src/: Project2.jl  load.jl  perceptron.jl
speech-recognition/: Pipfile  eden.sh  models.py  preproc.ipynb  test_preproc.ipynb  test_unknowns.ipynb  train.ipynb  train.py  train_binary.ipynb  train_cnn.py  train_lstm.ipynb  train_rev.ipynb  train_rnn.py  train_unknowns.ipynb  train_unknowns_rev.ipynb  valid_unknowns.ipynb
speech-recognition-julia/: Manifest.toml
speech-recognition-julia/src/: load.jl  perceptron.jl  utils.jl
